[package]
name = "ntex-timeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
ntex = { version = "0.7.9", features = ["tokio"] }
tokio = { version = "1.34.0", features = ["fs"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
